[package]
name = "big-fat-internet-button"
version = "0.1.0"
authors = ["Mikko Viitamäki <mikko.vitamaki@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32-hal", version = "0.16.0", features = ["xtal-40mhz"] }
esp-backtrace = { version = "0.9.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.8.0", features = ["esp32"] }

ds18b20 = "0.1.1"
esp-wifi = { version= "0.1.1", features = ["esp32"]}
# This seems to be related to esp32-hal version 0.17 as with 0.16 there is not problem
# Without this project can be build, but if included will get error:
#
# error: One of the feature flags must be provided: xtal-26mhz, xtal-40mhz, 
#    --> /home/mikko/.cargo/registry/src/index.crates.io-6f17d22bba15001f/esp-hal-common-0.13.1/build.rs:31:9
#     |
# 31  | ...   compile_error!(concat!("One of the feature flags must be provided: ", $($all, ", "),*...
#     |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
# ...
# 109 | ...   assert_unique_used_features!("xtal-26mhz", "xtal-40mhz");
#     |       -------------------------------------------------------- in this macro invocation
#     |
#     = note: this error originates in the macro `assert_used_features` which comes from the expansion of the macro `assert_unique_used_features` (in Nightly builds, run with -Z macro-backtrace for more info)


[profile.release]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
opt-level = 3
[profile.dev]
lto = "off"